# Hermes

./: .env  .gitignore  Cargo.toml  configuration.yaml
.github/workflows/: ci.yml
migrations/: 20250712174755_create_subscription_table.sql
scripts/: init_db.sh
src/: app.rs  configuration.rs  lib.rs  main.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
