[package]
name = "hermes"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.11.0"
tokio = "1.46.1"
serde = {version = "1.0.219", features = ["derive"]}
sqlx = {version ="0.8.6", features = ["postgres", "uuid", "chrono", "migrate", "macros", "runtime-tokio", "tls-rustls"]}
sqlx-cli = {version = "0.8.6", features = ["rustls", "postgres"]}
dotenvy = "0.15.7"
config = "0.15.13"
chrono = "0.4.41"
uuid = {version = "1.17.0", features = ["v4"]}
env_logger = "0.11.8"
log = "0.4.27"


